--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 body {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   min-height: 100vh;
-  background-image: url(images/mntwallpaper.jpg);
+  background-color: rgb(222, 222, 222);
 }
 
 .box {
@@ -18,7 +18,7 @@ body {
 h1 {
   text-align: center;
   margin-top: 200px;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 h5 {
