--- a/Search Park/index.css
+++ b/Search Park/index.css
@@ -1,7 +1,15 @@
 body {
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   min-height: 100vh;
-  background-color: rgb(222, 222, 222);
+  background-image: url("images/mntmonochrome.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.navbar-brand {
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .box {
@@ -13,6 +21,7 @@ body {
   margin-right: 248px;
   box-shadow: 10px 10px;
   background-color: rgb(255, 255, 255);
+  border-radius: 1em;
 }
 
 h1 {
@@ -24,4 +33,3 @@ h1 {
 h5 {
   color: rgb(0, 0, 0);
 }
-
